--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,11 @@
 
 RewriteCond %{REQUEST_URI} !^/app/build/
 
-RewriteRule ^(.*)$ /app/build/$1 [L]
+RewriteRule ^(.*)$ /portfolio-site-sveltekit/build/$1 [L]
 
 # Rewrite requests to non-existing files/dirs to /app/build/index.html
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.*)$ /app/build/index.html [L]
+RewriteRule ^(.*)$ /portfolio-site-sveltekit/build/index.html [L]
